--- a/PhoneGapBasic/www/index.html
+++ b/PhoneGapBasic/www/index.html
@@ -5,102 +5,123 @@
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <title></title>
+  <title>IFakApp</title>
   
-  
-  
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="css/jquery.mobile-1.3.1.min.css">
-  
-     <link rel="stylesheet" href="css/DummyRedWhite.css" />    
-    
-  <!-- Extra Codiqa features -->
+  <link rel="stylesheet" href="css/DummyRedWhite.css" />    
   <link rel="stylesheet" href="css/codiqa.ext.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   
-  <!-- jQuery and jQuery Mobile -->
-  <script src="js/jquery-1.9.1.min.js"></script>
-  <script src="js/jquery.mobile-1.3.1.min.js"></script>
-
+  <!-- JavaScript Libraries -->
+  <!-- EmberJS -->
+  <script src="js/libs/jquery-1.9.1.js"></script>
+  <script src="js/libs/handlebars-1.0.0-rc.4.js"></script>
+  <script src="js/libs/ember-1.0.0-rc.6.1.js"></script>
+  <script src="js/libs/ember-moving.js"></script>
+  <script src="js/app.js"></script>
+  
+  <!-- jQuery Mobile -->
+  <script src="js/libs/jquery.mobile-1.3.1.min.js"></script>
+  
   <!-- Extra Codiqa features -->
-  <script src="js/codiqa.ext.js"></script>
-   
+  <script src="js/libs/codiqa.ext.js"></script>
 </head>
+  
 <body>
 <!-- Home -->
-<div data-role="page" id="page1">
-    <div data-theme="a" data-role="header">
-        <h1>
-            IFakApp
-        </h1>
-    </div>
-    <div data-role="content">
-         <h1>
-            Schwarzes Brett
-        </h1>
-        <ul data-role="listview" data-divider-theme="a" data-inset="true">
-            <li data-theme="a">
-                <a href="#page1" data-transition="slide">
-                    Neuer Koch
-                    <span class="ui-li-count">
-                        Mensa
-                    </span>
-                </a>
-            </li>
-            <li data-theme="a">
-                <a href="#page1" data-transition="slide">
-                    Ehrung Thilo Enters
-                    <span class="ui-li-count">
-                        IWI
-                    </span>
-                </a>
-            </li>
-            <li data-theme="a">
-                <a href="#page1" data-transition="slide">
-                    Kanzlerin wird 50
-                    <span class="ui-li-count">
-                        R
-                    </span>
-                </a>
-            </li>
-            <li data-theme="a">
-                <a href="#page1" data-transition="slide">
-                    Werden wir alle dümmer?
-                    <span class="ui-li-count">
-                        IWI
-                    </span>
-                </a>
-            </li>
-            <li data-theme="a">
-                <a href="#page1" data-transition="slide">
-                    Reinigungspersonal vermisst Tasche
-                    <span class="ui-li-count">
-                        IWI
-                    </span>
-                </a>
-            </li>
-        </ul>
-    </div>
-     <div data-theme="a" data-role="footer" data-position="fixed">
-        <div data-role="navbar" data-iconpos="top" data-fullscreen="true" data-position="fixed">
-            <ul>
-                <li>
-                    <a href="#page1" data-transition="fade" data-theme="a" data-icon="info">
-                        Aktuelles
-                    </a>
-                </li>
-                <li>
-                    <a href="#page1" data-transition="fade" data-theme="a" data-icon="home">
-                        Student
-                    </a>
-                </li>
-                <li>
-                    <a href="#page1" data-transition="fade" data-theme="a" data-icon="star">
-                        Vorlesung
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
+<!-- Application Template -->
+<script type="text/x-handlebars" data-template-name="main">
+<!-- Header -->
+{{#view App.HeaderView}}
+  <h1>IFakApp</h1>
+{{/view}}
+
+<!-- Content -->
+{{#view App.MyView}}
+  {{outlet}}
+{{/view}}
+  
+<!-- Footer -->
+{{#view App.FooterView}}
+  <div data-role="navbar" data-iconpos="top" data-fullscreen="true" data-position="fixed">
+    <ul>
+      <li>
+        <a id="linkAktuelles" href="/aktuelles" data-transition="slide" data-theme="a" data-icon="info">
+          Aktuelles
+        </a>
+        </li>
+      <li>
+        <a id="linkStudent"  href="/student" data-transition="slide" data-theme="a" data-icon="home">
+          Student
+        </a>
+      </li>
+      <li>
+        <a id="linkVorlesung" href="/vorlesung" data-transition="slide" data-theme="a" data-icon="star">
+          Vorlesung
+        </a>
+      </li>
+    </ul>
+  </div>
+{{/view}}
+</script>
+  
+<!-- Templates -->
+<!-- Student Template -->
+<script type="text/x-handlebars" data-template-name="student">
+<h1>Student</h1>
+</script>
+  
+  
+<!-- Aktuelles Template -->
+<script type="text/x-handlebars" data-template-name="aktuelles">
+<h1>
+    Schwarzes Brett
+</h1>
+<ul data-role="listview" data-divider-theme="a" data-filter="true" data-filter-placeholder="Suche etwas ..." data-inset="true">
+    <li data-theme="a">
+        <a href="#page1" data-transition="slide">
+            Neuer Koch
+            <span class="ui-li-count">
+                Mensa
+            </span>
+        </a>
+    </li>
+    <li data-theme="a">
+        <a href="#page1" data-transition="slide">
+            Ehrung Thilo Enters
+            <span class="ui-li-count">
+                IWI
+            </span>
+        </a>
+    </li>
+    <li data-theme="a">
+        <a href="#page1" data-transition="slide">
+            Kanzlerin wird 50
+            <span class="ui-li-count">
+                R
+            </span>
+        </a>
+    </li>
+    <li data-theme="a">
+        <a href="#page1" data-transition="slide">
+            Werden wir alle dümmer?
+            <span class="ui-li-count">
+                IWI
+            </span>
+        </a>
+    </li>
+    <li data-theme="a">
+        <a href="#page1" data-transition="slide">
+            Reinigungspersonal vermisst Tasche
+            <span class="ui-li-count">
+                IWI
+            </span>
+        </a>
+    </li>
+</ul>
+</script>
     
-</div>
 </body>
 </html>
