--- a/PhoneGapBasic/www/index.html
+++ b/PhoneGapBasic/www/index.html
@@ -17,14 +17,14 @@
   <!-- JavaScript Libraries -->
   
   <!-- jQuery -->
-  <script src="js/libs/jquery-1.9.1.js"></script>
+  <script src="js/libs/jquery-1.10.2.min.js"></script>
   
   <!-- jQuery Mobile -->
-  <script src="js/libs/jquery.mobile-1.3.2.js"></script>
+  <script src="js/libs/jquery.mobile-1.3.1.custom.min.js"></script>
   
    <!-- EmberJS -->
   <script src="js/libs/handlebars-1.0.0-rc.4.js"></script>
-  <script src="js/libs/ember-1.0.0-rc.6.1.js"></script>
+  <script src="js/libs/ember-1.0.0-rc.7.min.js"></script>
   <script src="js/libs/ember-moving.js"></script>
   <script src="js/app.js"></script>
 </head>
@@ -35,7 +35,7 @@
   <!-- Application Template -->    
 <script type="text/x-handlebars" data-template-name="main">
 <div data-theme="a" data-role="header">
-  <h1>IFakApp</h1>
+  <h1>IFakApp - Faster?</h1>
 </div>
 
 {{#view App.MyView}}
