--- a/PhoneGapBasic/www/index.html
+++ b/PhoneGapBasic/www/index.html
@@ -24,7 +24,8 @@
   
    <!-- EmberJS -->
   <script src="js/libs/handlebars-1.0.0-rc.4.js"></script>
-  <script src="js/libs/ember-1.0.0-rc.7.min.js"></script>
+  <!-- <script src="js/libs/ember-1.0.0-rc.7.min.js"></script> -->
+  <script src="js/libs/ember-1.0.0-rc.6.1.js"></script>
   <script src="js/libs/ember-moving.js"></script>
   <script src="js/app.js"></script>
 </head>
