switched transition to none

--- a/PhoneGapBasic/www/index.html
+++ b/PhoneGapBasic/www/index.html
@@ -52,17 +52,17 @@
     <div data-role="navbar" data-iconpos="top" data-fullscreen="true" data-position="fixed">
         <ul>
             <li>
-                <a href="#/aktuelles" data-transition="fade" data-theme="a" data-icon="info">
+                <a href="#/aktuelles" data-transition="none" data-theme="a" data-icon="info">
                     Aktuelles
                 </a>
             </li>
             <li>
-                <a href="#/student" data-transition="fade" data-theme="a" data-icon="home">
+                <a href="#/student" data-transition="none" data-theme="a" data-icon="home">
                     Student
                 </a>
             </li>
             <li>
-                <a href="#/vorlesung" data-transition="fade" data-theme="a" data-icon="star">
+                <a href="#/vorlesung" data-transition="none" data-theme="a" data-icon="star">
                     Vorlesung
                 </a>
             </li>
