--- a/PhoneGapBasic/platforms/android/assets/www/index.html
+++ b/PhoneGapBasic/platforms/android/assets/www/index.html
@@ -24,7 +24,8 @@
   
    <!-- EmberJS -->
   <script src="js/libs/handlebars-1.0.0-rc.4.js"></script>
-  <script src="js/libs/ember-1.0.0-rc.7.min.js"></script>
+  <!-- <script src="js/libs/ember-1.0.0-rc.7.min.js"></script> -->
+  <script src="js/libs/ember-1.0.0-rc.6.1.js"></script>
   <script src="js/libs/ember-moving.js"></script>
   <script src="js/app.js"></script>
 </head>
@@ -51,17 +52,17 @@
     <div data-role="navbar" data-iconpos="top" data-fullscreen="true" data-position="fixed">
         <ul>
             <li>
-                <a href="#/aktuelles" data-transition="fade" data-theme="a" data-icon="info">
+                <a href="#/aktuelles" data-transition="none" data-theme="a" data-icon="info">
                     Aktuelles
                 </a>
             </li>
             <li>
-                <a href="#/student" data-transition="fade" data-theme="a" data-icon="home">
+                <a href="#/student" data-transition="none" data-theme="a" data-icon="home">
                     Student
                 </a>
             </li>
             <li>
-                <a href="#/vorlesung" data-transition="fade" data-theme="a" data-icon="star">
+                <a href="#/vorlesung" data-transition="none" data-theme="a" data-icon="star">
                     Vorlesung
                 </a>
             </li>
