Added simple model for "news". used (for testing purposes) the listview of the lib ember-moving.

--- a/PhoneGapBasic/www/index.html
+++ b/PhoneGapBasic/www/index.html
@@ -26,8 +26,11 @@
   <script src="js/libs/handlebars-1.0.0-rc.4.js"></script>
   <!-- <script src="js/libs/ember-1.0.0-rc.7.min.js"></script> -->
   <script src="js/libs/ember-1.0.0-rc.6.1.js"></script>
+  <script src="js/libs/ember-data-latest.js"></script>
   <script src="js/libs/ember-moving.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/models/store.js"></script>
+  <script src="js/models/news.js"></script>
 </head>
   
 <body>
@@ -35,7 +38,7 @@
 
   <!-- Application Template -->    
 <script type="text/x-handlebars" data-template-name="main">
-<div data-theme="a" data-role="header">
+<div data-theme="a" data-role="header" data-positon="fixed">
   <h1>IFakApp - Faster?</h1>
 </div>
 
@@ -100,48 +103,14 @@ $(function(){
 <h1>
     Schwarzes Brett
 </h1>
-<ul data-role="listview" data-divider-theme="a" data-filter="true" data-filter-placeholder="Suche etwas ..." data-inset="true">
-    <li data-theme="a">
-        <a href="#page1" data-transition="slide">
-            Neuer Koch
-            <span class="ui-li-count">
-                Mensa
-            </span>
-        </a>
-    </li>
-    <li data-theme="a">
-        <a href="#page1" data-transition="slide">
-            Ehrung Thilo Enters
-            <span class="ui-li-count">
-                IWI
-             </span>
-        </a>
-    </li>
-    <li data-theme="a">
-        <a href="#page1" data-transition="slide">
-            Kanzlerin wird 50
-            <span class="ui-li-count">
-                R
-            </span>
-        </a>
-    </li>
-    <li data-theme="a">
-        <a href="#page1" data-transition="slide">
-            Werden wir alle dümmer?
-            <span class="ui-li-count">
-                IWI
-            </span>
-        </a>
-    </li>
-    <li data-theme="a">
-        <a href="#page1" data-transition="slide">
-            Reinigungspersonal vermisst Tasche
-            <span class="ui-li-count">
-                IWI
-            </span>
-        </a>
-    </li>
-</ul>
+{{#collection App.ListView contentBinding="controller"}}
+  <a href="#">
+      <h3>{{title}}</h3>
+      <span class="ui-li-count">
+            {{organisation}}
+      </span>
+  </a>
+{{/collection}}
 </script>
     
 </body>
