--- a/PhoneGapBasic/www/index.html
+++ b/PhoneGapBasic/www/index.html
@@ -115,7 +115,7 @@ $(function(){
 <h1>
     Schwarzes Brett
 </h1>
-{{#collection App.ListView contentBinding="controller.content"}}
+{{#collection App.ListView contentBinding="controller.items"}}
   <a href="#">
       <h3>{{title}}</h3>
       <span class="ui-li-count">
