--- a/PhoneGapBasic/platforms/wp8/www/index.html
+++ b/PhoneGapBasic/platforms/wp8/www/index.html
@@ -58,7 +58,7 @@
 <div data-role="navbar" data-iconpos="top" data-fullscreen="true" data-position="fixed" data-tap-toggle="false">
       <ul>
           <li>
-              {{#linkTo 'main.aktuelles' data-icon='info'}}Aktuelles{{/linkTo}}
+              {{#linkTo 'main.aktuelles' data-icon='info' class='ui-btn-active'}}Aktuelles{{/linkTo}}
           </li>
           <li>
               {{#linkTo 'main.student' data-icon='home'}}Student{{/linkTo}}
